fix bug with story-body overflow

--- a/app/styles/common-content.scss
+++ b/app/styles/common-content.scss
@@ -21,6 +21,7 @@
 	font-size: 1.1em;
 	color: $darkGrey;
 	line-height: $goldenRatio;
+	overflow: hidden;
 	p {
 		line-height: $goldenRatio;
 		padding-bottom: 1em;
